--- a/develop/blocks/investment-steps/investment-steps.pug
+++ b/develop/blocks/investment-steps/investment-steps.pug
@@ -3,7 +3,7 @@ mixin investment-steps()
         +inner
             +e.wrapper
                 +e.title
-                    +title 
+                    +title(data-aos="fade-right-full")
                         | Как <br>инвестировать<br> с&nbsp;Aktivo
                 +e.UL.list
                     +e.LI.item
