--- a/develop/blocks/main-header/main-header.scss
+++ b/develop/blocks/main-header/main-header.scss
@@ -23,6 +23,8 @@
         width: 54px;
         margin-bottom: 10px;
 
+        overflow: hidden;
+
         img {
             display: block;
             width: 100%;
