--- a/develop/blocks/object-finances/object-finances.pug
+++ b/develop/blocks/object-finances/object-finances.pug
@@ -8,51 +8,47 @@ mixin object-finances()
                 tr
                     td
                         .heading Работа фонда
+                    td Август 2017
+                    td Сентябрь 2017
+                    td Октябрь 2017
+                    td Ноябрь 2017
                     td Декабрь 2017
                     td Январь 2018
                     td Февраль 2018
-                    td Март 2018
-                    td Апрель 2018
-                    td Май 2018
-                    td Июнь 2018
-                    td Июль 2018
-                    td Август 2018
-                    td Сентябрь 2018
-                    td Октябрь 2018
                     td &nbsp;
                 tr
                     th Доход
-                    each val in Array.from(new Array(11))
+                    each val in Array.from(new Array(7))
                         td 10 390 900.00 ₽
                     td
                         | &nbsp;
                 tr   
                     th Расход
-                    each val in Array.from(new Array(11))
+                    each val in Array.from(new Array(7))
                         td 0.00 ₽
                     td
                         | &nbsp;
                 tr   
                     th ЧОД
-                    each val in Array.from(new Array(11))
+                    each val in Array.from(new Array(7))
                         td 1 390 900.00 ₽
                     td
                         | &nbsp;
                 tr   
                     th Комиссия за управление
-                    each val in Array.from(new Array(11))
+                    each val in Array.from(new Array(7))
                         td 99.99 ₽
                     td
                         | &nbsp;
                 tr   
                     th Доход на распределение
-                    each val in Array.from(new Array(11))
+                    each val in Array.from(new Array(7))
                         td 12 290.99 ₽
                     td
                         | &nbsp;
                 tr   
                     th Доход на пай до НДФЛ
-                    each val in Array.from(new Array(11))
+                    each val in Array.from(new Array(7))
                         td 1 700.01 ₽
                     td
                         | &nbsp;
