--- a/develop/blocks/profit-calc/profit-calc.pug
+++ b/develop/blocks/profit-calc/profit-calc.pug
@@ -3,12 +3,12 @@ mixin profit-calc()
         +inner
             +e.wrapper
                 +e.text
-                    +e.ruble-icon
+                    +e.ruble-icon(data-aos="fade-left")
                         +icon('ruble-icon')
                     p Доходность коллективных инвестиций выше, чем у большинства классических низкорисковых способов получения пассивного дохода
                     a(href='#') Подробнее
                 +e.title
-                    +title
+                    +title(data-aos="fade-right-full")
                         | Рассчитайте ваш доход
                 +e.investment
                     +e.investment-range
