--- a/develop/jade/partners-page.pug
+++ b/develop/jade/partners-page.pug
@@ -11,7 +11,7 @@ html(lang='ru')
         .page
             +partners-wrapper
                 +e.steps
-                    +e.step.active
+                    +e.step
                         include ../../app/images/redesign/partners-page/1.svg
                     +e.step 
                         include ../../app/images/redesign/partners-page/2.svg
