--- a/develop/jade/template/footer.pug
+++ b/develop/jade/template/footer.pug
@@ -5,16 +5,17 @@ mixin doc-footer()
     script(src='libs/jquery.inputmask.min.js')
     script(src='libs/fancybox/jquery.fancybox.js')
     script(src='libs/svgxuse.js')
-    script(src='libs/simpleBar/simplebar.js')
+    //- script(src='libs/simpleBar/simplebar.js')
     //- script(src='libs/aos/aos.min.js')
     script(src='libs/tooltips/popper.js')
     script(src='libs/tooltips/tooltip.js')
-    script(src='libs/dropzone.js')
+    //- script(src='libs/dropzone.js')
     script(src='libs/nouislider/nouislider.js')
     script(src='libs/nouislider/wNumb.js')
     script(src='libs/micromodal.min.js')
     script(src='libs/modal-video-master/js/jquery-modal-video.min.js')
     script(src='libs/highcharts/highcharts.js')
+    script(src='libs/aos/aos.min.js')
     //- script(src='libs/stickyfill.min.js')
 
     //- script(src='libs/lazyload.js')
