--- a/develop/jade/template/header.pug
+++ b/develop/jade/template/header.pug
@@ -20,6 +20,7 @@ mixin doc-header()
         link(href='libs/simpleBar/simplebar.css', rel='stylesheet')
         link(href='libs/fancybox/jquery.fancybox.css', rel='stylesheet')
         link(href='libs/nouislider/nouislider.css', rel='stylesheet')
+        link(href='libs/aos/aos.min.css', rel='stylesheet')
         link(href='libs/modal-video-master/css/modal-video.min.css', rel='stylesheet')
         //- link(href='libs/MagnificPopup/magnific-popup.css', rel='stylesheet')
         //- link(href='libs/dropzone.css', rel='stylesheet')
