--- a/develop/blocks/best-objects/best-objects.pug
+++ b/develop/blocks/best-objects/best-objects.pug
@@ -2,7 +2,7 @@ mixin best-objects()
     +b.SECTION.best-objects
         +inner
             +e.title
-                +title
+                +title(data-aos="fade-right-full")
                     | Все объекты<br> проходят проверку
             +e.wrapper
                 +e.content
@@ -26,11 +26,11 @@ mixin best-objects()
                         +e.legend-item.--hidden 0%
                     +e.objects
                         +e.object
-                            +best-object-card(1, '«Эко Видное»', '87,4%')(data-rate='87.4')
+                            +best-object-card(1, '«Эко Видное»', '87,4%')(data-rate='87.4' data-aos="fade-up")
                         +e.object
-                            +best-object-card(2, '«Перекресток»', '93,3%')(data-rate='93.3')
+                            +best-object-card(2, '«Перекресток»', '93,3%')(data-rate='93.3' data-aos="fade-up" data-aos-delay='500')
                         +e.object
-                            +best-object-card(1, '«Эко Видное»', '77,3%')(data-rate='77.3')
+                            +best-object-card(1, '«Эко Видное»', '77,3%')(data-rate='77.3' data-aos="fade-up" data-aos-delay='1000')
                         +e.object
                             +best-object-card(1, '«Эко Видное»', '87,4%')(data-rate='87.4')
                         +e.object
