--- a/develop/blocks/index-top/index-top.scss
+++ b/develop/blocks/index-top/index-top.scss
@@ -14,6 +14,7 @@
         position: relative;
         top: -6px;
         margin: 0 0 34px;
+        overflow: hidden;
     }
 
     &__advantages {
