--- a/develop/blocks/object-slider/object-slider.scss
+++ b/develop/blocks/object-slider/object-slider.scss
@@ -5,6 +5,8 @@
     height: 310px;
     z-index: 12;
 
+    overflow: hidden;
+
     &__data {
         position: absolute;
         z-index: 1;
@@ -66,6 +68,10 @@
         width: 100%;
         height: 100%;
 
+        &:not(.slick-initialized) {
+            overflow: hidden;
+        }
+
         .slick-list,
         .slick-track {
             width: 100%;
@@ -102,6 +108,7 @@
 
     &__slide {
         position: relative;
+        height: 100%;
 
         &::after {
             content: '';
