--- a/develop/scss/includes/fonts.scss
+++ b/develop/scss/includes/fonts.scss
@@ -4,7 +4,7 @@
     font-style: normal;
     src: url('../fonts/Montserrat/Montserrat-300.woff2') format('woff2'),
         url('../fonts/Montserrat/Montserrat-300.woff') format('woff');
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -13,7 +13,7 @@
     font-style: normal;
     src: url('../fonts/Montserrat/Montserrat-400.woff2') format('woff2'),
         url('../fonts/Montserrat/Montserrat-400.woff') format('woff');
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -22,7 +22,7 @@
     font-style: normal;
     src: url('../fonts/Montserrat/Montserrat-500.woff2') format('woff2'),
         url('../fonts/Montserrat/Montserrat-500.woff') format('woff');
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -31,7 +31,7 @@
     font-style: normal;
     src: url('../fonts/Montserrat/Montserrat-600.woff2') format('woff2'),
         url('../fonts/Montserrat/Montserrat-600.woff') format('woff');
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -40,5 +40,5 @@
     font-style: normal;
     src: url('../fonts/Montserrat/Montserrat-700.woff2') format('woff2'),
         url('../fonts/Montserrat/Montserrat-700.woff') format('woff');
-    font-display: swap;
+    font-display: block;
 }
