main-nav animation fix

--- a/develop/blocks/main-nav/main-nav.pug
+++ b/develop/blocks/main-nav/main-nav.pug
@@ -2,7 +2,7 @@ mixin main-nav()
     +b.NAV.main-nav
         +e.UL.list
             each link, index in mainNav
-                +e.LI.item(data-aos="fade-left" data-aos-delay="50" * index + 1)
+                +e.LI.item(data-aos="fade-left" data-aos-delay="50" * (index + 1))
                     if (link.subnav)
                         +e.A.link.has-subnav(href=link.url) #{link.text}
                         +e.subnav
