--- a/develop/blocks/howitworks-top/howitworks-top.scss
+++ b/develop/blocks/howitworks-top/howitworks-top.scss
@@ -135,6 +135,8 @@
 
 @media #{$laptop} {
     .howitworks-top {
+        padding-top: 135px;
+        
         &__step {
             padding-left: 112px;
         }
