--- a/develop/blocks/object/object.scss
+++ b/develop/blocks/object/object.scss
@@ -122,6 +122,7 @@
 
 @media #{$laptop} {
     .object {
+        padding-top: 80px;
         .lines {
             .line {
                 width: 43%;
