--- a/develop/blocks/profit-calc/profit-calc.pug
+++ b/develop/blocks/profit-calc/profit-calc.pug
@@ -16,7 +16,7 @@ mixin profit-calc()
                         +e.investment-label Сколько вложить
                         +e.investment-value
                 +e.objects
-                    +e.income-range
+                    //- +e.income-range
                     +e.objects-nav
                         div ТЦ «Эко Видное»
                         div ТЦ «Город»
