--- a/develop/blocks/object-calc/object-calc.pug
+++ b/develop/blocks/object-calc/object-calc.pug
@@ -11,7 +11,7 @@ mixin object-calc()
                     +e.investment-value
             +e.income-result
                 +e.income-label Сколько получить
-                +e.income-range
+                //- +e.income-range
                 +e.image
                     img(src='images/redesign/object-cards/object1.jpg', alt="")
                 +e.income-data(data-min='300000' data-max='18000000' data-liberty-step='85000' data-step='100000' data-initial='2000000')
