--- a/develop/blocks/object-calc/object-calc.scss
+++ b/develop/blocks/object-calc/object-calc.scss
@@ -321,5 +321,15 @@
             flex: 1 1 auto;
             min-height: 560px;
         }
+
+        &__investment-range,
+        &__income-range {
+            .noUi-handle {
+                &::before,
+                &::after {
+                    top: 40%;
+                }
+            }
+        }
     }
 }
