--- a/develop/blocks/object-estimates/object-estimates.scss
+++ b/develop/blocks/object-estimates/object-estimates.scss
@@ -18,9 +18,10 @@
         margin-bottom: 5px;
 
         color: $theme-color;
-        font-size: 44px;
+        font-size: 42px;
         font-weight: 600;
         line-height: 1;
+        white-space: nowrap;
     }
 
     &__sum-label {
@@ -97,7 +98,7 @@
         }
 
         &__sum-value {
-            font-size: 38px;
+            font-size: 36px;
         }
     }
 }
@@ -109,7 +110,7 @@
         }
 
         &__sum-value {
-            font-size: 60px;
+            font-size: 58px;
         }
     }
 }
@@ -121,7 +122,7 @@
         }
 
         &__sum-value {
-            font-size: 74px;
+            font-size: 72px;
         }
     }
 }
