--- a/develop/blocks/project-calc/project-calc.scss
+++ b/develop/blocks/project-calc/project-calc.scss
@@ -45,6 +45,10 @@
         font-size: 10px;
         color: #9e9e9e;
         line-height: 2;
+
+        &.accent {
+            color: red;
+        }
     }
 
     &__result-row {
