--- a/develop/blocks/project-input/project-input.scss
+++ b/develop/blocks/project-input/project-input.scss
@@ -27,6 +27,10 @@
         font-size: 16px;
         font-weight: 500;
         line-height: 1.4;
+
+        sup {
+            color: red;
+        }
     }
 
     &__input {
@@ -65,6 +69,7 @@
     }
 
     &__error {
+        display: none;
         position: absolute;
         width: 100%;
         background-color: #fff;
@@ -72,10 +77,10 @@
         font-size: 10px;
         line-height: 2;
 
-        opacity: 0;
-        pointer-events: none;
+        // opacity: 0;
+        // pointer-events: none;
 
-        transition: opacity 300ms ease;
+        // transition: opacity 300ms ease;
     }
 }
 
